--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "@ngrx/store": "^2.2.1",
     "@ngrx/store-devtools": "^3.2.2",
     "@ngrx/store-log-monitor": "^3.0.2",
+    "angularfire2": "^2.0.0-beta.6",
     "core-js": "^2.4.1",
+    "firebase": "^3.6.0",
+    "hammerjs": "^2.0.8",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.19-3",
