--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.2.1",
-    "@angular/compiler": "~2.2.1",
-    "@angular/core": "~2.2.1",
-    "@angular/forms": "~2.2.1",
-    "@angular/http": "~2.2.1",
+    "@angular/common": "~2.2.4",
+    "@angular/compiler": "~2.2.4",
+    "@angular/core": "~2.2.4",
+    "@angular/forms": "~2.2.4",
+    "@angular/http": "~2.2.4",
     "@angular/material": "^2.0.0-alpha.10",
-    "@angular/platform-browser": "~2.2.1",
-    "@angular/platform-browser-dynamic": "~2.2.1",
+    "@angular/platform-browser": "~2.2.4",
+    "@angular/platform-browser-dynamic": "~2.2.4",
     "@angular/router": "~3.2.1",
     "@ngrx/core": "^1.2.0",
-    "angularfire2": "^2.0.0-beta.6",
+    "angularfire2": "^2.0.0-beta.6-preview",
     "core-js": "^2.4.1",
     "firebase": "^3.6.0",
     "hammerjs": "^2.0.8",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.0-rc.4",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.20-4",
-    "codelyzer": "1.0.0-beta.4",
+    "codelyzer": "2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
     "karma": "1.3.0",
@@ -45,8 +45,8 @@
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.11",
     "ts-node": "1.7.0",
-    "tslint": "3.15.1",
+    "tslint": "4.0.2",
     "typescript": "~2.0.8",
-    "webdriver-manager": "10.2.8"
+    "webdriver-manager": "10.2.10"
   }
 }
