--- a/package.json
+++ b/package.json
@@ -12,29 +12,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.2.4",
-    "@angular/compiler": "~2.2.4",
-    "@angular/core": "~2.2.4",
-    "@angular/forms": "~2.2.4",
-    "@angular/http": "~2.2.4",
-    "@angular/material": "^2.0.0-alpha.10",
-    "@angular/platform-browser": "~2.2.4",
-    "@angular/platform-browser-dynamic": "~2.2.4",
-    "@angular/router": "~3.2.1",
+    "@angular/common": "~2.3.0",
+    "@angular/compiler": "~2.3.0",
+    "@angular/core": "~2.3.0",
+    "@angular/forms": "~2.3.0",
+    "@angular/http": "~2.3.0",
+    "@angular/platform-browser": "~2.3.0",
+    "@angular/platform-browser-dynamic": "~2.3.0",
+    "@angular/router": "~3.3.0",
     "@ngrx/core": "^1.2.0",
     "angularfire2": "^2.0.0-beta.6-preview",
     "core-js": "^2.4.1",
     "firebase": "^3.6.0",
-    "hammerjs": "^2.0.8",
-    "rxjs": "5.0.0-rc.4",
+    "rxjs": "5.0.0-rc.5",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@types/hammerjs": "^2.0.33",
+    "@angular/compiler-cli": "^2.3.0",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.20-4",
+    "angular-cli": "1.0.0-beta.22-1",
     "codelyzer": "2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
@@ -43,10 +41,10 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.11",
+    "protractor": "4.0.13",
     "ts-node": "1.7.0",
     "tslint": "4.0.2",
-    "typescript": "~2.0.8",
+    "typescript": "~2.1.4",
     "webdriver-manager": "10.2.10"
   }
 }
