--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -17,8 +17,7 @@
       "../node_modules/@types"
     ],
     "types": [
-      "jasmine",
-      "hammerjs"
+      "jasmine"
     ],
     "include": [
         "src/**/*"
