updated angular-cli to 2.3.0 fixed compiler errors

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -17,7 +17,8 @@
       "../node_modules/@types"
     ],
     "types": [
-      "jasmine"
+      "jasmine",
+      "hammer.js"
     ],
     "include": [
         "src/**/*"
