--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "~2.3.0",
     "@angular/forms": "~2.3.0",
     "@angular/http": "~2.3.0",
+    "@angular/material": "^2.0.0-alpha.11-3",
     "@angular/platform-browser": "~2.3.0",
     "@angular/platform-browser-dynamic": "~2.3.0",
     "@angular/router": "~3.3.0",
@@ -24,15 +25,17 @@
     "angularfire2": "^2.0.0-beta.6-preview",
     "core-js": "^2.4.1",
     "firebase": "^3.6.0",
-    "rxjs": "5.0.0-rc.5",
+    "hammerjs": "^2.0.8",
+    "rxjs": "^5.0.0-rc.4",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.0",
+    "@types/hammerjs": "^2.0.33",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.22-1",
+    "angular-cli": "^1.0.0-beta.20-4",
     "codelyzer": "2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
@@ -44,7 +47,7 @@
     "protractor": "4.0.13",
     "ts-node": "1.7.0",
     "tslint": "4.0.2",
-    "typescript": "~2.1.4",
+    "typescript": "^2.0.10",
     "webdriver-manager": "10.2.10"
   }
 }
