--- a/package.json
+++ b/package.json
@@ -12,42 +12,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.3.0",
-    "@angular/compiler": "~2.3.0",
-    "@angular/core": "~2.3.0",
-    "@angular/forms": "~2.3.0",
-    "@angular/http": "~2.3.0",
-    "@angular/material": "^2.0.0-alpha.11-3",
-    "@angular/platform-browser": "~2.3.0",
-    "@angular/platform-browser-dynamic": "~2.3.0",
-    "@angular/router": "~3.3.0",
+    "@angular/common": "~2.4.1",
+    "@angular/compiler": "~2.4.1",
+    "@angular/core": "~2.4.1",
+    "@angular/forms": "~2.4.1",
+    "@angular/http": "~2.4.1",
+    "@angular/material": "^2.0.0-beta.1",
+    "@angular/platform-browser": "~2.4.1",
+    "@angular/platform-browser-dynamic": "~2.4.1",
+    "@angular/router": "~3.4.1",
     "@ngrx/core": "^1.2.0",
     "angularfire2": "^2.0.0-beta.6-preview",
     "core-js": "^2.4.1",
-    "firebase": "^3.6.0",
+    "firebase": "^3.6.4",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.0.0-rc.4",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "rxjs": "^5.0.2",
+    "ts-helpers": "^1.1.2",
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.0",
-    "@types/hammerjs": "^2.0.33",
-    "@types/jasmine": "^2.2.30",
-    "@types/node": "^6.0.42",
+    "@angular/compiler-cli": "^2.4.1",
+    "@types/hammerjs": "^2.0.34",
+    "@types/jasmine": "^2.5.38",
+    "@types/node": "^6.0.54",
     "angular-cli": "^1.0.0-beta.20-4",
-    "codelyzer": "2.0.0-beta.1",
+    "codelyzer": "2.0.0-beta.4",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
     "karma": "1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.13",
-    "ts-node": "1.7.0",
-    "tslint": "4.0.2",
-    "typescript": "^2.0.10",
-    "webdriver-manager": "10.2.10"
+    "karma-jasmine": "^1.1.0",
+    "karma-remap-istanbul": "^0.4.0",
+    "protractor": "4.0.14",
+    "ts-node": "1.7.3",
+    "tslint": "4.2.0",
+    "typescript": "2.0.10",
+    "webdriver-manager": "11.1.0"
   }
 }
