--- a/package.json
+++ b/package.json
@@ -12,42 +12,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.4.8",
-    "@angular/compiler": "~2.4.8",
-    "@angular/core": "~2.4.8",
-    "@angular/forms": "~2.4.8",
-    "@angular/http": "~2.4.8",
-    "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "~2.4.8",
-    "@angular/platform-browser-dynamic": "~2.4.8",
-    "@angular/router": "~3.4.8",
+    "@angular/animations": "^4.1.0",
+    "@angular/common": "^4.1.0",
+    "@angular/compiler": "^4.1.0",
+    "@angular/compiler-cli": "^4.1.0",
+    "@angular/core": "^4.1.0",
+    "@angular/forms": "^4.1.0",
+    "@angular/http": "^4.1.0",
+    "@angular/material": "^2.0.0-beta.3",
+    "@angular/platform-browser": "^4.1.0",
+    "@angular/platform-browser-dynamic": "^4.1.0",
+    "@angular/platform-server": "^4.1.0",
+    "@angular/router": "^4.1.0",
     "@ngrx/core": "^1.2.0",
-    "angularfire2": "^2.0.0-beta.6-preview",
+    "angularfire2": "^4.0.0-rc.0",
     "core-js": "^2.4.1",
-    "firebase": "^3.6.9",
+    "firebase": "^3.9.0",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.1.1",
+    "rxjs": "^5.3.1",
     "ts-helpers": "^1.1.2",
-    "zone.js": "^0.7.7"
+    "typescript": "^2.3.2",
+    "zone.js": "^0.8.9"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.4.8",
+    "@angular/compiler-cli": "^4.1.0",
     "@types/hammerjs": "^2.0.34",
-    "@types/jasmine": "^2.5.43",
-    "@types/node": "^7.0.5",
+    "@types/jasmine": "^2.5.47",
+    "@types/node": "^7.0.15",
     "angular-cli": "^1.0.0-beta.20-4",
-    "codelyzer": "2.0.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.2.0",
-    "karma": "1.4.1",
-    "karma-chrome-launcher": "^2.0.0",
+    "codelyzer": "3.0.1",
+    "jasmine-core": "2.6.1",
+    "jasmine-spec-reporter": "4.1.0",
+    "karma": "1.6.0",
+    "karma-chrome-launcher": "^2.1.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.6.0",
     "protractor": "5.1.1",
-    "ts-node": "2.1.0",
-    "tslint": "4.4.2",
-    "typescript": "2.1.6",
-    "webdriver-manager": "12.0.2"
+    "ts-node": "3.0.2",
+    "tslint": "5.1.0",
+    "typescript": "2.3.2",
+    "webdriver-manager": "12.0.5"
   }
 }
